[package]
name = "dohc-rs"
version = "0.1.0"
authors = ["thekuwayama <thekuwayama@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.9", features = ["rustls-tls"] }
failure = "0.1"
clap = "2.33"
